Add Forfiy ccd-case-migration-starter.  NOTE: Awaiting Fortify client release ID